# ec2-metadata

./: .pre-commit-config.yaml  .travis.yml  :memory  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  ec2_metadata.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  test_ec2_metadata.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
ec2_metadata/: __init__.py
requirements/: compile.py  py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: ec2_metadata.py
src/ec2_metadata/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_ec2_metadata.py  test_it.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
