[metadata]
name = ec2_metadata
version = 2.13.0
description = An easy interface to query the EC2 metadata API, with caching.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/ec2-metadata
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = AWS, EC2, metadata
project_urls =
    Changelog = https://github.com/adamchainz/ec2-metadata/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    ec2_metadata
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
